--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ layout: home
             <div class="author-carousel">
                 <div class="author">
                     <blockquote>
-                        <figure class="author-picture"><img src="/assets/img/rajesh.png" alt=""></figure>
+                        <figure class="author-picture"><img src="assets/img/rajesh.png" alt=""></figure>
                         <article class="paragraph-wrapper">
                             <div class="inner">
                                 <header>I just want to give a big thanks to everyone at College DIEMS. You guys are helping me to make my dream come true.</header>
@@ -220,7 +220,7 @@ layout: home
                 </div><!-- /.author -->
                 <div class="author">
                     <blockquote>
-                        <figure class="author-picture"><img src="/assets/img/bilal.png" alt=""></figure>
+                        <figure class="author-picture"><img src="assets/img/bilal.png" alt=""></figure>
                         <article class="paragraph-wrapper">
                             <div class="inner">
                                 <header>Academics of my college are very good and well organised. Daily routine includes 8 hours in total which includes practical and lectures. All the required concepts are taught by my teachers which are helpful for a better understanding of present world applications and also future applications. Overall I have a very good experience in my college everyday.</header>
@@ -232,7 +232,7 @@ layout: home
                 </div><!-- /.author -->
                 <div class="author">
                     <blockquote>
-                        <figure class="author-picture"><img src="/assets/img/student-testimonial.jpg" alt=""></figure>
+                        <figure class="author-picture"><img src="assets/img/student-testimonial.jpg" alt=""></figure>
                         <article class="paragraph-wrapper">
                             <div class="inner">
                                 <header>I can positively say DIEMS has made me a better person. It has helped me develop a positive attitude towards my studies and discover more about myself. Teachers are very caring and interested in students’ well-being. They make sure every class is fun, educational and interactive.</header>
@@ -524,7 +524,7 @@ layout: home
                                 {% if (cat == 'company')  %}
 
                                   <div class="logo">
-                                      <a href=""><img src="/assets/img/recruiting companies/{{g.src}}" alt=""></a>
+                                      <a href=""><img src="assets/img/recruiting companies/{{g.src}}" alt=""></a>
                                   </div>
 
                                 {% endif %}
